# tock

./: Cargo.toml  networking_in_tock.md  rust-toolchain.toml
boards/: Makefile.common
boards/components/src/: console.rs
boards/nordic/nrf52840dk/src/: lib.rs
boards/ti-cc2650-smartrf06/: Cargo.toml  Makefile  flash-kernel.openocd
boards/ti-cc2650-smartrf06/src/: io.rs  main.rs
boards/ti-cc2650/cherry_mote/: Cargo.toml  Makefile
boards/ti-cc2650/cherry_mote/src/: io.rs  main.rs
boards/ti-cc2650/common/: Cargo.toml  Makefile.common  chip_layout.ld
boards/ti-cc2650/common/src/: lib.rs  startup.rs
boards/ti-cc2650/smartrf06/: Cargo.toml  Makefile  chip_layout.ld  flash-kernel.openocd  layout.ld
boards/ti-cc2650/smartrf06/src/: io.rs  main.rs
boards/ti-cc2650dk/: Cargo.toml  Makefile  build.rs  flash-kernel.openocd
boards/ti-cc2650dk/src/: io.rs  main.rs
capsules/core/src/: console_lite.rs  lib.rs
capsules/extra/src/: rf233.rs
capsules/extra/src/net/: network_capabilities.rs
chips/cc2650/: Cargo.toml  build.rs
chips/cc2650/.cargo/: config.toml
chips/cc2650/src/: aes.rs  ccfg.rs  chip.rs  crt1.rs  fcfg.rs  gpio.rs  gpt.rs  ieee802154_radio.rs  lib.rs  peripheral_interrupts.rs  prcm.rs  sce_uart_emulator.lst  scif.rs  uart.rs  udma.rs
chips/cc2650/src/driverlib/: bindings.rs  mod.rs
chips/ti-cc2650/: Cargo.toml
doc/: Getting_Started.md
kernel/src/hil/: uart.rs
