[package]
name = "ti-cc2650-smartrf06"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "../build.rs"

[dependencies]
components = { path = "../components" }
cortexm3 = { path = "../../arch/cortex-m3" }
kernel = { path = "../../kernel" }
cc2650 = "0.1.1"
cc2650_chip = { package = "cc2650", path = "../../chips/cc2650" }

capsules-core = { path = "../../capsules/core" }
capsules-extra = { path = "../../capsules/extra" }
capsules-system = { path = "../../capsules/system" }
