[package]
name = "cc2650"
version.workspace = true
authors.workspace = true
edition.workspace = true
links = "driverlib"

[features]
# By default disabled. Cherry Mote crate enables it explicitly, for the serial bootloader to support it.
# SmartRF06 is assumed to be programmed with openocd, so no need for CCFG there.
ccfg = []

[dependencies]
cortexm3 = { path = "../../arch/cortex-m3" }
kernel = { path = "../../kernel" }
cty = "0.2.2"
cc2650 = "0.1.1"
tock-cells = { path = "../../libraries/tock-cells"}

[build-dependencies]
bindgen = { version = "0.69.4", features = ["experimental"] }
cc = "1.0.90"
