[package]
name = "cc2650"
version.workspace = true
authors.workspace = true
edition.workspace = true
links = "driverlib"

[features]
# By default disabled. Cherry Mote crate enables it explicitly, for the serial bootloader to support it.
# SmartRF06 is assumed to be programmed with openocd, so no need for CCFG there.
ccfg = []

# The current impl makes no use of overwhelming majority of the uDMA control table,
# so in order to save memory, only its prefix is used by default.
# There is no point atm in enabling this feature.
full_udma_table = []

[dependencies]
cortexm3 = { path = "../../arch/cortex-m3" }
kernel = { path = "../../kernel" }
cty = "0.2.2"
cc2650 = "0.1.1"
tock-cells = { path = "../../libraries/tock-cells"}

[build-dependencies]
bindgen = { version = "0.69.4", features = ["experimental"] }
cc = "1.0.90"
