[package]
name = "ti-cc2650-cherry-mote"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "../../build.rs"

[dependencies]
cortexm3 = { path = "../../../arch/cortex-m3" }
cc2650 = "0.1.1"
cc2650_chip = { package = "cc2650", path = "../../../chips/cc2650" }
ti-cc2650-common = { path = "../common"}
kernel = { path = "../../../kernel" }
