[package]
name = "ti-cc2650-cherry-mote"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "../../build.rs"

[features]
default = ["ccfg", "uart_lite", "debug_to_lite"]
# By default enabled, because CherryMote is assumed to be programmed with serial bootloader,
# which currently erases the whole flash, requiring CCFG to be reflashed.
ccfg = ["ti-cc2650-common/ccfg"]
# By default enabled, because Cherry Mote has UART-lite hard-wired in a way it works.
uart_lite = ["ti-cc2650-common/uart_lite"]
# By default enabled, because it's Lite that is intended for debug purposes.
debug_to_lite = ["ti-cc2650-common/debug_to_lite"]


[dependencies]
cortexm3 = { path = "../../../arch/cortex-m3" }
cc2650 = "0.1.1"
cc2650_chip = { package = "cc2650", path = "../../../chips/cc2650" }
ti-cc2650-common = { path = "../common" }
kernel = { path = "../../../kernel" }
