[package]
name = "ti-cc2650-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# By default disabled, because SmartRF06 is assumed to be programmed with openocd,
# so no need for CCFG there.
ccfg = ["cc2650_chip/ccfg"]

[dependencies]
components = { path = "../../components" }
cortexm3 = { path = "../../../arch/cortex-m3" }
kernel = { path = "../../../kernel" }
cc2650 = "0.1.1"
cc2650_chip = { package = "cc2650", path = "../../../chips/cc2650" }

capsules-core = { path = "../../../capsules/core" }
capsules-extra = { path = "../../../capsules/extra" }
capsules-system = { path = "../../../capsules/system" }

