[package]
name = "ti-cc2650-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# By default disabled, because SmartRF06 is assumed to be programmed with openocd,
# so no need for CCFG there.
ccfg = ["cc2650_chip/ccfg"]

# By default disabled, as interpreting UART-lite outputs require a UART equipment connected to the pin,
# which SmartRF06 has not connected by default.
uart_lite = ["cc2650_chip/uart_lite"]

# By default disabled, as Lite is not available in all setups (on SmartRF06 by default it's not present).
# Full works correctly, so it's the default.
debug_to_lite = ["uart_lite"]

[dependencies]
components = { path = "../../components" }
cortexm3 = { path = "../../../arch/cortex-m3" }
kernel = { path = "../../../kernel" }
cc2650 = "0.1.1"
cc2650_chip = { package = "cc2650", path = "../../../chips/cc2650" }

capsules-core = { path = "../../../capsules/core" }
capsules-extra = { path = "../../../capsules/extra" }
capsules-system = { path = "../../../capsules/system" }
