[package]
name = "ti-cc2650-smartrf06"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "../../build.rs"

[features]
default = [
    #
    "ccfg",
]
ccfg = ["ti-cc2650-common/ccfg"]
uart_lite = ["ti-cc2650-common/uart_lite"]

[dependencies]
cortexm3 = { path = "../../../arch/cortex-m3" }
cc2650 = "0.1.1"
cc2650_chip = { package = "cc2650", path = "../../../chips/cc2650" }
ti-cc2650-common = { path = "../common"}
kernel = { path = "../../../kernel" }
